log
Wed 24 Apr 2024 08:22:21 PM UTC: 
 tests:  0|6
total_score: 0/70
1e1015d
Wed 24 Apr 2024 08:26:33 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a5b35b4
Wed 24 Apr 2024 08:33:33 PM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:33: error: expected statement before ‘)’ token
   44 |   if (map->buckets[pos] == NULL)) {
      |                                 ^
hashmap.c:44:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   44 |   if (map->buckets[pos] == NULL)) {
      |   ^~
hashmap.c:44:35: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   44 |   if (map->buckets[pos] == NULL)) {
      |                                   ^
hashmap.c:48:3: error: ‘else’ without a previous ‘if’
   48 |   else{
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
5882051
